Fixes #921 - [Mobile Web] Numeric input and checkbox are not aligned in iOS

--- a/web/static/mobile_survey/css/mobile.scss
+++ b/web/static/mobile_survey/css/mobile.scss
@@ -126,7 +126,7 @@ select {
 }
 .input-button-inline {
   input {
-    width: 60%;
+    width: 52%;
   }
   .btn {
     float: right;
